# fastApi_todo

./: .env  .gitignore  Makefile  database.py  main.py  models.py  pyproject.toml  requirements.txt  todo.sqlite3
templates/: edit.html
